--- a/meetup-2017-08-05.md
+++ b/meetup-2017-08-05.md
@@ -1,7 +1,7 @@
 ---
 title: 【Infra Meetup NO.53】知乎数据平台实践
 date: 2017-08-05
-tags: ["tidb"]
+tags: ["知乎","数据平台","Protobuf","埋点"]
 author: ['王雨舟']
 type: meetup
 meetup_type: review
@@ -11,19 +11,19 @@ meetup_type: review
 > 今天的 Meetup，我们邀请到了知乎数据平台负责人王雨舟为大家做《知乎数据平台实践》的技术分享。
 
 
-![](./media/meetup-ede09c32b94815e73f534bf655426e6a.jpeg)
+![](media/meetup-ede09c32b94815e73f534bf655426e6a.jpeg)
 
 又是一个美好的周末，勤劳的小蜜蜂们早早出来参加活动了~🙂 今天的活动现场又是爆满~ 感觉要换地儿的节奏啊~
 
-![](./media/meetup-a76875a76dfd7338b2f8fe337130de0b.jpeg)
+![](media/meetup-a76875a76dfd7338b2f8fe337130de0b.jpeg)
 
 今天 Meetup 的开场，我司联合创始人兼 CTO 黄东旭同学首先为大家分享了 TiDB 项目的最新进展。黄东旭同学好开心的样子，因为就在昨天，[TiDB 正式发布 RC4 版](http://mp.weixin.qq.com/s?__biz=MzI3NDIxNTQyOQ==&mid=2247485130&idx=1&sn=00d1274012173fe1a4e56aeb309eecd5&chksm=eb1621a0dc61a8b6034bd0faa95d471acbd819063386f3d500310d1d02f22039b3c7ccffac14&scene=21#wechat_redirect) 。
 
-![](./media/meetup-8b5ba1109ba484cc3389cb03454cf93e.jpeg)
+![](media/meetup-8b5ba1109ba484cc3389cb03454cf93e.jpeg)
 
 开场过后，接下来由知乎数据平台负责人王雨舟（江湖人称宇宙哥）开始为大家做技术分享。
 
-![](./media/meetup-2bd4ccfa181f650c7bf8f5281c1da44e.jpeg)
+![](media/meetup-2bd4ccfa181f650c7bf8f5281c1da44e.jpeg)
 
 宇宙哥真是 PingCAP 的真爱粉儿~ 穿着我司的文化衫亮相活动现场，超级有气场~
 
@@ -31,15 +31,9 @@ meetup_type: review
 
 宇宙哥在演讲开始先介绍了知乎大数据平台的整体架构情况
 
-![](./media/meetup-efe2325dbc83df01af08e34acc60c1ba.png)
+![](media/meetup-efe2325dbc83df01af08e34acc60c1ba.png)
 
-并讲解了埋点流程及
-
-使用
-
-Protobuf
-
-做埋点标准化规范
+并讲解了埋点流程及使用 Protobuf 做埋点标准化规范
 
 ![](./media/meetup-39d57411d3800d2b727fd467478bad29.png)
 
