--- a/meetup-2017-05-13.md
+++ b/meetup-2017-05-13.md
@@ -1,9 +1,33 @@
 ---
-title: 【Infra Meetup No.48】分布式对象存储面临的挑战（内附 PPT 下载链接）
+title: 【Infra Meetup No.48】分布式对象存储面临的挑战
 date: 2017-05-13
-tags: ["sql"]
+tags: ["存储"]
 author: ['张炎泼']
 type: meetup
+meetup_type: review
 ---
 
-## 【Infra Meetup No.48】
+> 今天的 Meetup，我们请到了来自白山云的张炎泼老师，为大家分享《分布式对象存储面临的挑战》。
+
+
+讲师介绍：张炎泼 (xp)，30 年软件开发经验，物理系背叛者，设计师眼中的美工，bug maker，vim 死饭，悬疑片脑残粉。曾就职新浪，美团。现在白山云，不是白云山。
+
+![](http://upload-images.jianshu.io/upload_images/542677-92b8676c5d37c939.jpeg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+在本次分享中，张炎泼老师从：海量小文件如何存储、如何节省存储成本、如何实现数据的自动恢复，三个方面，为大家进行了详细讲解。
+
+![](http://upload-images.jianshu.io/upload_images/542677-4168e39fb0744a68.jpeg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+以下是本期 PPT 节选
+
+![](http://upload-images.jianshu.io/upload_images/542677-64d8db7214d3fbdc.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](http://upload-images.jianshu.io/upload_images/542677-08ef1daff9498a66.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](http://upload-images.jianshu.io/upload_images/542677-5f02703b94228531.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](http://upload-images.jianshu.io/upload_images/542677-87b760ba910a3367.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](http://upload-images.jianshu.io/upload_images/542677-d8d711b10c50c271.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+点击 [下载本期 PPT](https://eyun.baidu.com/s/3bpKSlzh)
