--- a/meetup-2017-07-22.md
+++ b/meetup-2017-07-22.md
@@ -1,7 +1,7 @@
 ---
-title: 【Infra Meetup NO.52】TiDB 自动化运维管理 —— TiDB-Operator》
+title: 【Infra Meetup NO.52】TiDB 自动化运维管理 —— TiDB-Operator
 date: 2017-07-22
-tags: ["分布式"]
+tags: ["TiDB-Operator"]
 author: ['邓栓']
 type: meetup
 meetup_type: review
@@ -9,22 +9,22 @@ meetup_type: review
 
 > 今天的 Meetup，由我司技术大拿邓栓同学为大家分享《TiDB 自动化运维管理 —— TiDB-Operator》。
 
-![](./media/meetup-91ff2d7094ed80004f4ea08859e50c4e.jpeg)
+![](media/meetup-91ff2d7094ed80004f4ea08859e50c4e.jpeg)
 
 今日的帝都带着一丝凉爽，如此好天气怎能辜负。小伙伴们一清早就来到互动现场，一起来吃“营养早午餐”。
 
-![](./media/meetup-895c8fad189cf5a54186e48d6b25c4e3.jpeg)
+![](media/meetup-895c8fad189cf5a54186e48d6b25c4e3.jpeg)
 
 我司技术大拿邓栓同学激情满满的开始为大家做主题分享，主要从 TiDB-Operator 的功能介绍、整体架构、实现细节这几个纬度切入。
 
-![](./media/meetup-b6617fc9c5edbd42cc7256801029dcfd.jpeg)
+![](media/meetup-b6617fc9c5edbd42cc7256801029dcfd.jpeg)
 
 邓栓同学开场介绍到：分布式系统由于自身的复杂性，其管理和运维通常是非常困难的事情，借助 TiDB-Operator 我们能够轻松地将 TiDB 集群部署到 Kubernetes 集群之上，并做到自动化运维管理，极大地降低了人力运维成本，现场小伙伴们听呆了～
 
-![](./media/meetup-ce5f36e3e72e8600f71caceafb10843b.jpeg)
+![](media/meetup-ce5f36e3e72e8600f71caceafb10843b.jpeg)
 
 咦？what'wrong ? 黑灯瞎火嘛呢？
-![](./media/meetup-c628bf616f833abb58f69ce9eccbf131.jpeg)
+![](media/meetup-c628bf616f833abb58f69ce9eccbf131.jpeg)
 
 其实是小伙伴们在一起很专注的看 demo 演示~
 
@@ -35,7 +35,6 @@ meetup_type: review
 *****
 
 
-![](./media/meetup-e25f6be57ad83a237c6ee3899f65e75c.png)
+![](media/meetup-e25f6be57ad83a237c6ee3899f65e75c.png)
 邓栓，PingCAP SRE 工程师，Kubernetes 爱好者，目前主要负责 TiDB 与各种云平台整合。Rust 中国社区联合创始人。
-
 
