--- a/meetup-2017-09-20.md
+++ b/meetup-2017-09-20.md
@@ -14,9 +14,9 @@ meetup_type: review
 
 ### 精彩现场
 
-![](./media/meetup-0679822ee6d3697b734cfea6df666a91.jpeg)
+![](media/meetup-0679822ee6d3697b734cfea6df666a91.jpeg)
 
-![](./media/meetup-1fbcd62ba55521e6927c50a702c55e90.jpeg)
+![](media/meetup-1fbcd62ba55521e6927c50a702c55e90.jpeg)
 
 在 PingCAP Infra Meetup 第 56 期论文专场，来了很多对 MonetDB/X100 论文感兴趣的小伙伴们。分享一开始，我司联合创始人兼 CEO 刘奇就为何选择 MonetDB/X100 这篇论文分享了自己看法。
 
@@ -26,7 +26,7 @@ meetup_type: review
 
 在 2012年的时候，第一个提供论文、代码的基于 MonetDB 的 GPU 的 Database 也出来了。当时是在 TPCH 的 query 里面，有一些复杂的 query，提升是非常的明显。所以大家可以看到，基于 MonetDB 改造的，在 FPGA 或者 GPU上运行的系统都有，实际上这是一个非常优秀的学术的原形，今年得了十年最佳论文奖。"
 
-![](./media/meetup-0ffba4ca5159bf444804f334ff5a44b6.jpeg)
+![](media/meetup-0ffba4ca5159bf444804f334ff5a44b6.jpeg)
 
 接下来，我司核心工程师张建就这篇最佳论文做了拆分讲解，
 
@@ -34,29 +34,30 @@ meetup_type: review
 
 ### 技术干货节选
 
-![](./media/meetup-1123564cb384cb599e25d83356b9fb23.png)
+![](media/meetup-1123564cb384cb599e25d83356b9fb23.png)
 
-![](./media/meetup-fbd55bd1ec4b6f4bc0157f0db600be72.png)
+![](media/meetup-fbd55bd1ec4b6f4bc0157f0db600be72.png)
 
-![](./media/meetup-3974f4c816503c2289c09bd945e3fd99.png)
+![](media/meetup-3974f4c816503c2289c09bd945e3fd99.png)
 
-![](./media/meetup-c4359ef5808773ca39b20f39a4822f41.png)
+![](media/meetup-c4359ef5808773ca39b20f39a4822f41.png)
 
-![](./media/meetup-0f4621b848323588db0ce4737401828e.png)
+![](media/meetup-0f4621b848323588db0ce4737401828e.png)
 
-![](./media/meetup-b7a6907130ca00f543dccbaf1c8d8ea7.png)
+![](media/meetup-b7a6907130ca00f543dccbaf1c8d8ea7.png)
 
-![](./media/meetup-8f6806dcc109d58165087695fa42139d.png)
+![](media/meetup-8f6806dcc109d58165087695fa42139d.png)
 
-![](./media/meetup-a25dcd1a36ed79b5b0160a1bc3785cc8.png)
+![](media/meetup-a25dcd1a36ed79b5b0160a1bc3785cc8.png)
 
-![](./media/meetup-94e75ad04c65c3dfee48536be0699013.png)
+![](media/meetup-94e75ad04c65c3dfee48536be0699013.png)
 
-![](./media/meetup-dbbdd9b5e90f045319c848f24342f88e.png)
+![](media/meetup-dbbdd9b5e90f045319c848f24342f88e.png)
 
-![](./media/meetup-f5c9df81945ef949dab9b19673e78a71.png)
+![](media/meetup-f5c9df81945ef949dab9b19673e78a71.png)
 
-![](./media/meetup-930971fa380c2ec2dbd4a2b393fe9096.png)
+![](media/meetup-930971fa380c2ec2dbd4a2b393fe9096.png)
 
 以上就是张建带给大家的部分论文精彩内容，小伙伴们可以观看现场演讲视频，慢慢 Enjoy~  也敬请期待我们下一期的内容 :)
 
+点击[下载 PPT](https://eyun.baidu.com/s/3pL7JKa3)
