build: test for error report

--- a/meetup-2016-05-21.md
+++ b/meetup-2016-05-21.md
@@ -1,8 +1,7 @@
 ---
 title: PingCAP 第9期 NewSQL Meetup
-date: 2016-05-21
 tags: ["spark"]
-author: ['韩飞', '刘奇']
+author: ['韩飞', '刘奇'
 type: meetup
 ---
 
@@ -43,4 +42,3 @@ NewSQL Meetup
 详细分析了 TiKV 的 MVCC 机制, 事务模型，并进一步介绍了 percolator 事务模型的特点，以及对 GC 的影响。另外讲解了 TiKV 对 percolator 事务模型的改进, 以及 TiKV 的 GC 算法，和如何支持长时间的数据库备份和分析操作。
 
 PingCAP Meetup
-
