revert: revert correct yaml

--- a/meetup-2016-05-21.md
+++ b/meetup-2016-05-21.md
@@ -1,7 +1,8 @@
 ---
 title: PingCAP 第9期 NewSQL Meetup
+date: 2016-05-21
 tags: ["spark"]
-author: ['韩飞', '刘奇'
+author: ['韩飞', '刘奇']
 type: meetup
 ---
 
