chore: test for preview

--- a/meetup-2016-09-10.md
+++ b/meetup-2016-09-10.md
@@ -11,10 +11,7 @@ type: meetup
 *2016-09-10* *金坤&黄华超* [PingCAP](##)
 PingCAP
 
-**PingCAP** ![]()
-微信号
-
-pingcap2015
+**PingCAP** 
 
 功能介绍
 
@@ -26,11 +23,7 @@ NewSQL Meetup
 
 今天是 Ping
 
-CAP 第 23 期 Meetup，主题是金坤分享的《
-
-How to write a good commit message
-
-》以及黄华超分享的《QuorumKV：微信分布式 KV 存储系统》。
+CAP 第 23 期 Meetup，主题是金坤分享的《How to write a good commit message》以及黄华超分享的《QuorumKV：微信分布式 KV 存储系统》。
 
 ****
 
